--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <h2 id="Winner">It is X's turn.</h2>
-  <button onclick="ResetGame();" id="resetGameButton">Reset Game</button>
+  <button onclick="ResetGame();" id="resetGameButton">Start over</button>
 </body>
 
 </html>
